[package]
name = "rust-it8951"
version = "0.1.0"
authors = ["Martijn Faassen <faassen@startifact.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.1"
serde = { version = "1.0.116", features = ["derive"]}
scsi = "0.2.1"
nix = "0.18.0"