[package]
name = "rust-it8951"
version = "0.1.0"
authors = ["Martijn Faassen <faassen@startifact.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1"
serde = { version = "1", features = ["derive"] }
rusb = "0.9"
image = "0.23"
anyhow = "1"

